# dashboard-analytics

./: .env  .gitignore  RECAP_PROJET_HIER.md  RECAP_PROJET_JEUDI_16_10.md  RECAP_PROJET_MARDI_14_10.md  docker-compose.yml  package-lock.json  package.json
backend/: ARCHITECTURE.md  Dockerfile  GUIDE_TABLES.md  INSTALL_POETRY.md  README.md  README_ARCHITECTURE.md  STRUCTURE.md  TESTING_API.md  alembic.ini  check_schema.py  check_tables.py  create_admin.py  pyproject.toml  test_admin_routes.py  test_db_connection.py  test_operational_costs_complete.py  test_permissions_complete.py
backend/alembic/: env.py
backend/alembic/versions/: 6627b8110736_migration_initiale.py  748b20db702a_add_is_active_is_verified_to_users.py  84300c3c651e_ajout_toutes_tables.py  ba043d6e8d69_add_section_permissions_table.py  d88dfcad96f5_add_operational_costs_table.py
backend/app/: __init__.py  config.py  main.py  models.py
backend/app/api/: __init__.py
backend/app/controllers/: __init__.py  auth_controller.py  operational_cost_controller.py  role_controller.py  section_permission_controller.py  user_controller.py
backend/app/core/: __init__.py  base_repository.py  base_service.py  config.py  constants.py  database.py  exceptions.py  security.py
backend/app/dto/: __init__.py  auth_dto.py  operational_cost_dto.py  role_dto.py  section_permission_dto.py  user_dto.py
backend/app/middlewares/: auth_middleware.py  permission_middleware.py
backend/app/repositories/: __init__.py  base_repository.py  (+4 more)
backend/tests/: test_security.py
etl/: Dockerfile  crontab  etl.py  pyproject.toml
(+59 files in other folders)
